--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DroidFactory</string>
+    <string name="app_name">MemReaction</string>
     <string name="title_memes">MemReaction</string>
     <string name="descriptions">Когда тим-лид показывает новичку, как решить проблему</string>
 </resources>
